update class method

--- a/W1/w1_class.ipynb
+++ b/W1/w1_class.ipynb
@@ -13,7 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(1.0)"
+    "print(type(1.0))\n",
+    "print(type(1))"
    ]
   },
   {
@@ -33,6 +34,61 @@
    "source": [
     "hype_boy = '뉴진스의 하입보이요'\n",
     "hype_boy[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'홍대를 가려면 어떻게 해야해요? ' + hype_boy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_jeans = ['민지', '하니', '다니엘', '해린', '혜인']\n",
+    "new_jeans[0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(new_jeans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_jeans_dict = {'민지':20, '하니':19, '다니엘':19, '해린': 18, '혜인': 16}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(new_jeans_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_jeans_dict['민지']"
    ]
   },
   {
@@ -95,16 +151,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def 버거울_때(input_text):\n",
-    "\t\tif input_text == None:\n",
-    "\t\t\t\toutput_text = \"버거울 때 버거 먹어요.\"\n",
-    "\t\telse:\n",
-    "\t\t\t\toutput_text = f\"버거울 때 {input_text} 먹어요.\"\n",
-    "\t\t\n",
-    "\t\treturn output_text\n",
-    "\n",
-    "print(버거울_때())\n",
-    "print(버거울_때('돈까스'))"
+    "def 버거울_때(input_text=None):\n",
+    "\tif input_text == None:\n",
+    "\t\toutput_text = \"버거울 때 버거 먹어요.\"\n",
+    "\telse:\n",
+    "\t\toutput_text = f\"버거울 때 {input_text} 먹어요.\"\n",
+    "\t\n",
+    "\treturn output_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "버거울_때()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "버거울_때('돈까스')"
    ]
   },
   {
@@ -132,7 +203,7 @@
    "outputs": [],
    "source": [
     "Minji = Newjeans('민지', 20, 'Korean') # def __init__(Minji, 'Minji', 20, 'Korean')\n",
-    "Hanni = Newjeans('하니', 19, 'Australian/Vietnamese') # def __init__(Hanni, 'Hanni', 19, 'Australian/Vietnamese')]"
+    "Hanni = Newjeans('하니', 19, 'Australian/Vietnamese') # def __init__(Hanni, 'Hanni', 19, 'Australian/Vietnamese')"
    ]
   },
   {
@@ -161,11 +232,20 @@
    "source": [
     "# Newjeans 클래스를 상속받는 Haerin 클래스 선언\n",
     "class HR(Newjeans):\n",
-    "    def __init__(self, name, age, nationality):\n",
-    "        super().__init__(name, age, nationality)\n",
+    "    def __init__(self, name, age, nationality, input_text=None):\n",
+    "        super().__init__(name, age, nationality) # Newjeans 클래스의 __init__ 메소드를 상속받음\n",
+    "        self.input_text = input_text\n",
     "        \n",
     "    def tyoko(self):\n",
-    "        print(f\"{self.name}는 이번 도쿄돔 버니즈 캠프에서 댄스 솔로 무대를 했다.\")"
+    "        print(f\"{self.name}이는 이번 도쿄돔 버니즈 캠프에서 댄스 솔로 무대를 했다.\")\n",
+    "        \n",
+    "    def 버거울_때(self):\n",
+    "        if self.input_text is None:\n",
+    "            output_text = \"버거울 때 버거 먹어요.\"\n",
+    "        else:\n",
+    "            output_text = f\"버거울 때 {self.input_text} 먹어요.\"\n",
+    "        \n",
+    "        return output_text"
    ]
   },
   {
@@ -184,6 +264,34 @@
    "outputs": [],
    "source": [
     "Haerin.tyoko()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Haerin.버거울_때()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Haerin2 = HR('해린', 18, 'Korean', '돈까스')\n",
+    "Haerin2.버거울_때()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Haerin2.tyoko()"
    ]
   }
  ],
