--- a/W3/w2_review_answer.ipynb
+++ b/W3/w2_review_answer.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install torch torchvision"
+    "# !pip install torch torchvision numpy matplotlib"
    ]
   },
   {
@@ -33,10 +33,13 @@
     "import torch.optim as optim\n",
     "import torch.optim.lr_scheduler as lr_scheduler\n",
     "\n",
-    "# from torch.utils.tensorboard import SummaryWriter\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
     "\n",
     "import torchvision\n",
-    "from torchvision import transforms, datasets"
+    "from torchvision import transforms, datasets\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -47,8 +50,8 @@
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device('cuda')\n",
-    "elif torch.backends.mps.is_available():\n",
-    "    device = torch.device('mps')\n",
+    "# elif torch.backends.mps.is_available():\n",
+    "#     device = torch.device('mps')\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
     "\n",
@@ -81,6 +84,51 @@
     "\n",
     "train_loader = torch.utils.data.DataLoader(train_set, batch_size=BATCH_SIZE, shuffle=True)\n",
     "test_loader = torch.utils.data.DataLoader(test_set, batch_size=BATCH_SIZE, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter('runs/fashion_mnist_experiment')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vs code 없는 사람: \n",
+    "# command: tensorboard --logdir=runs\n",
+    "# browser: https://localhost:6006"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matplotlib_imshow(img, one_channel=False):\n",
+    "    if one_channel:\n",
+    "        img = img.mean(dim=0)\n",
+    "    img = img / 2 + 0.5\n",
+    "    npimg = img.numpy()\n",
+    "    if one_channel:\n",
+    "        plt.imshow(npimg, cmap=\"Greys\")\n",
+    "    else:\n",
+    "        plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "\n",
+    "dataiter = iter(train_loader)\n",
+    "images, labels = next(dataiter)\n",
+    "\n",
+    "img_grid = torchvision.utils.make_grid(images)\n",
+    "matplotlib_imshow(img_grid, one_channel=True)\n",
+    "\n",
+    "writer.add_image('four_fashion_mnist_images', img_grid)"
    ]
   },
   {
@@ -145,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# writer = SummaryWriter('runs/fashion_mnist_experiment')"
+    "writer.add_graph(model, images)"
    ]
   },
   {
@@ -154,21 +202,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def visualize_samples_tensorboard(loader, classes, samples_per_class=5):\n",
-    "#     class_dict = {i: [] for i in range(len(classes))}\n",
+    "def visualize_samples_tensorboard(loader, classes, samples_per_class=5):\n",
+    "    class_dict = {i: [] for i in range(len(classes))}\n",
     "    \n",
-    "#     for img, label in loader:\n",
-    "#         for i in range(len(img)):\n",
-    "#             if len(class_dict[label[i].item()]) < samples_per_class:\n",
-    "#                 class_dict[label[i].item()].append(img[i])\n",
-    "#         if all(len(v) == samples_per_class for v in class_dict.values()):\n",
-    "#             break\n",
+    "    for img, label in loader:\n",
+    "        for i in range(len(img)):\n",
+    "            if len(class_dict[label[i].item()]) < samples_per_class:\n",
+    "                class_dict[label[i].item()].append(img[i])\n",
+    "        if all(len(v) == samples_per_class for v in class_dict.values()):\n",
+    "            break\n",
     "    \n",
-    "#     for label, images in class_dict.items():\n",
-    "#         grid = torchvision.utils.make_grid(images, nrow=samples_per_class, normalize=True)\n",
-    "#         writer.add_image(f'{classes[label]} samples', grid, 0)\n",
+    "    for label, images in class_dict.items():\n",
+    "        grid = torchvision.utils.make_grid(images, nrow=samples_per_class, normalize=True)\n",
+    "        writer.add_image(f'{classes[label]} samples', grid, 0)\n",
     "\n",
-    "# visualize_samples_tensorboard(train_loader, classes)"
+    "visualize_samples_tensorboard(train_loader, classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_n_random(data, labels, n=100):\n",
+    "    '''\n",
+    "    데이터셋에서 n개의 임의의 데이터포인트(datapoint)와 그에 해당하는 라벨을 선택합니다\n",
+    "    '''\n",
+    "    assert len(data) == len(labels)\n",
+    "\n",
+    "    perm = torch.randperm(len(data))\n",
+    "    return data[perm][:n], labels[perm][:n]\n",
+    "\n",
+    "images, labels = select_n_random(train_set.data, train_set.targets)\n",
+    "\n",
+    "class_labels = [classes[lab] for lab in labels]\n",
+    "\n",
+    "features = images.view(-1, 28 * 28)\n",
+    "writer.add_embedding(features,\n",
+    "                    metadata=class_labels,\n",
+    "                    label_img=images.unsqueeze(1))\n",
+    "\n",
+    "def images_to_probs(net, images):\n",
+    "    '''\n",
+    "    학습된 신경망과 이미지 목록으로부터 예측 결과 및 확률을 생성합니다\n",
+    "    '''\n",
+    "    output = net(images)\n",
+    "    _, preds_tensor = torch.max(output, 1)\n",
+    "    preds = np.squeeze(preds_tensor.numpy())\n",
+    "    return preds, [F.softmax(el, dim=0)[i].item() for i, el in zip(preds, output)]\n",
+    "\n",
+    "\n",
+    "def plot_classes_preds(net, images, labels):\n",
+    "    '''\n",
+    "    학습된 신경망과 배치로부터 가져온 이미지 / 라벨을 사용하여 matplotlib\n",
+    "    Figure를 생성합니다. 이는 신경망의 예측 결과 / 확률과 함께 정답을 보여주며,\n",
+    "    예측 결과가 맞았는지 여부에 따라 색을 다르게 표시합니다. \"images_to_probs\"\n",
+    "    함수를 사용합니다.\n",
+    "    '''\n",
+    "    preds, probs = images_to_probs(net, images)\n",
+    "    fig = plt.figure(figsize=(12, 48))\n",
+    "    for idx in np.arange(4):\n",
+    "        ax = fig.add_subplot(1, 4, idx+1, xticks=[], yticks=[])\n",
+    "        matplotlib_imshow(images[idx], one_channel=True)\n",
+    "        ax.set_title(\"{0}, {1:.1f}%\\n(label: {2})\".format(\n",
+    "            classes[preds[idx]],\n",
+    "            probs[idx] * 100.0,\n",
+    "            classes[labels[idx]]),\n",
+    "                    color=(\"green\" if preds[idx]==labels[idx].item() else \"red\"))\n",
+    "    return fig"
    ]
   },
   {
@@ -212,8 +314,10 @@
     "    print(f'Train Epoch: {epoch} Loss: {epoch_loss:.4f} Accuracy: {epoch_accuracy:.2f}%')\n",
     "    \n",
     "    scheduler.step()\n",
-    "    # writer.add_scalar('Loss/train', epoch_loss, epoch)\n",
-    "    # writer.add_scalar('Accuracy/train', epoch_accuracy, epoch)\n",
+    "    writer.add_scalar('Loss/train', epoch_loss, epoch)\n",
+    "    writer.add_scalar('Accuracy/train', epoch_accuracy, epoch)\n",
+    "    \n",
+    "    writer.add_figure('predictions vs. actuals', plot_classes_preds(model, data, target), global_step=epoch)\n",
     "\n",
     "# 테스트 함수\n",
     "def test(model, test_loader, criterion, epoch, device, writer=None):\n",
@@ -236,15 +340,15 @@
     "    test_accuracy = 100. * correct / total\n",
     "\n",
     "    print(f'Test Epoch: {epoch} Loss: {test_loss:.4f} Accuracy: {test_accuracy:.2f}%')\n",
-    "    # writer.add_scalar('Loss/test', test_loss, epoch)\n",
-    "    # writer.add_scalar('Accuracy/test', test_accuracy, epoch)\n",
+    "    writer.add_scalar('Loss/test', test_loss, epoch)\n",
+    "    writer.add_scalar('Accuracy/test', test_accuracy, epoch)\n",
     "\n",
     "# 훈련 및 테스트 실행\n",
     "epochs = 50\n",
     "\n",
     "for epoch in range(1, epochs + 1):\n",
-    "    train(model, train_loader, optimizer, scheduler, criterion, epoch, device)\n",
-    "    test(model, test_loader, criterion, epoch, device)"
+    "    train(model, train_loader, optimizer, scheduler, criterion, epoch, device, writer)\n",
+    "    test(model, test_loader, criterion, epoch, device, writer)"
    ]
   },
   {
