--- a/W3/w3_artist.ipynb
+++ b/W3/w3_artist.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a232bd80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## vscode \n",
+    "\n",
+    "# python: 인터프리터 선택 > conda env 동일하게 선택"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a2bcba5f-002e-4f49-9622-ada6117faf0a",
    "metadata": {},
@@ -11,15 +23,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dfc33f5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install torch torchvision numpy matplotlib cv2 scikit-learn tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2b0d9b68-7102-4eca-9543-3b9b8acafc6e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import cv2\n",
     "import random\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os\n",
-    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -33,6 +56,7 @@
     "\n",
     "from tqdm.auto import tqdm\n",
     "\n",
+    "import torchvision\n",
     "import torchvision.models as models\n",
     "import torchvision.transforms as transforms\n",
     "\n",
@@ -45,14 +69,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e777dcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writer = SummaryWriter('runs/artist_experiment')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d13862e3-bb27-47af-9b58-a9fbf804df71",
    "metadata": {},
    "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    device = torch.device('cuda')\n",
-    "elif torch.backends.mps.is_available():\n",
-    "    device = torch.device('mps')\n",
+    "# elif torch.backends.mps.is_available():\n",
+    "#     device = torch.device('mps')\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
     "\n",
@@ -317,6 +351,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4856e9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matplotlib_imshow(img, one_channel=False):\n",
+    "    if one_channel:\n",
+    "        img = img.mean(dim=0)\n",
+    "    img = img / 2 + 0.5\n",
+    "    npimg = img.numpy()\n",
+    "    if one_channel:\n",
+    "        plt.imshow(npimg, cmap=\"Greys\")\n",
+    "    else:\n",
+    "        plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "\n",
+    "def images_to_probs(net, images):\n",
+    "    '''\n",
+    "    학습된 신경망과 이미지 목록으로부터 예측 결과 및 확률을 생성합니다\n",
+    "    '''\n",
+    "    output = net(images)\n",
+    "    _, preds_tensor = torch.max(output, 1)\n",
+    "    preds = np.squeeze(preds_tensor.numpy())\n",
+    "    return preds, [F.softmax(el, dim=0)[i].item() for i, el in zip(preds, output)]\n",
+    "\n",
+    "def plot_classes_preds(net, images, labels, classes):\n",
+    "    '''\n",
+    "    학습된 신경망과 배치로부터 가져온 이미지 / 라벨을 사용하여 matplotlib\n",
+    "    Figure를 생성합니다. 이는 신경망의 예측 결과 / 확률과 함께 정답을 보여주며,\n",
+    "    예측 결과가 맞았는지 여부에 따라 색을 다르게 표시합니다. \"images_to_probs\"\n",
+    "    함수를 사용합니다.\n",
+    "    '''\n",
+    "    preds, probs = images_to_probs(net, images)\n",
+    "    fig = plt.figure(figsize=(12, 48))\n",
+    "    for idx in np.arange(4):\n",
+    "        ax = fig.add_subplot(1, 4, idx+1, xticks=[], yticks=[])\n",
+    "        matplotlib_imshow(images[idx], one_channel=True)\n",
+    "        ax.set_title(\"{0}, {1:.1f}%\\n(label: {2})\".format(\n",
+    "            classes[preds[idx]],\n",
+    "            probs[idx] * 100.0,\n",
+    "            classes[labels[idx]]),\n",
+    "                    color=(\"green\" if preds[idx]==labels[idx].item() else \"red\"))\n",
+    "    return fig"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "122af0aa-a1fd-4595-9488-35761e3cb596",
    "metadata": {},
@@ -331,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, optimizer, train_loader, device):\n",
+    "def train(model, optimizer, train_loader, device, writer, epoch, classes):\n",
     "    model.train()\n",
     "    train_loss = []\n",
     "    criterion = nn.CrossEntropyLoss().to(device)\n",
@@ -351,12 +431,16 @@
     "        train_loss.append(loss.item())\n",
     "\n",
     "    tr_loss = np.mean(train_loss)\n",
+    "    \n",
+    "    writer.add_scalar('Loss/train', tr_loss, epoch)    \n",
+    "    writer.add_figure('predictions vs. actuals', plot_classes_preds(model, images, labels, classes), global_step=epoch)\n",
+    "    \n",
     "    return tr_loss\n",
     "\n",
     "def competition_metric(true, pred):\n",
     "    return f1_score(true, pred, average=\"macro\")\n",
     "\n",
-    "def validation(model, test_loader, device):\n",
+    "def validation(model, test_loader, device, writer, epoch):\n",
     "    model.eval()\n",
     "    \n",
     "    model_preds = []\n",
@@ -379,17 +463,21 @@
     "            true_labels += label.detach().cpu().numpy().tolist()\n",
     "\n",
     "    val_f1 = competition_metric(true_labels, model_preds)\n",
-    "    return np.mean(val_loss), val_f1\n",
+    "    val_loss = np.mean(val_loss)\n",
+    "    \n",
+    "    writer.add_scalar('Loss/val', val_loss, epoch)\n",
+    "    writer.add_scalar('F1/val', val_f1, epoch)\n",
+    "    return val_loss, val_f1\n",
     "\n",
-    "def train_and_evaluate(model, optimizer, train_loader, test_loader, scheduler, device, epochs):\n",
+    "def train_and_evaluate(model, optimizer, train_loader, test_loader, scheduler, device, epochs, writer, classes):\n",
     "    model.to(device)\n",
     "\n",
     "    best_score = 0\n",
     "    best_model = None\n",
     "    \n",
     "    for epoch in range(1, epochs+1):\n",
-    "        tr_loss = train(model, optimizer, train_loader, device)\n",
-    "        val_loss, val_score = validation(model, test_loader, device)\n",
+    "        tr_loss = train(model, optimizer, train_loader, device, writer, epoch, classes)\n",
+    "        val_loss, val_score = validation(model, test_loader, device, writer, epoch)\n",
     "        \n",
     "        print(f'Epoch [{epoch}], Train Loss : [{tr_loss:.5f}] Val Loss : [{val_loss:.5f}] Val F1 Score : [{val_score:.5f}]')\n",
     "\n",
@@ -423,9 +511,37 @@
     "model = BaseModel().to(device)\n",
     "model.eval()\n",
     "optimizer = torch.optim.Adam(params = model.parameters(), lr = CFG[\"LEARNING_RATE\"])\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.1)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dd993bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataiter = iter(train_loader)\n",
+    "images, labels = next(dataiter)\n",
     "\n",
-    "infer_model = train_and_evaluate(model, optimizer, train_loader, val_loader, scheduler, device, CFG[\"EPOCHS\"])"
+    "img_grid = torchvision.utils.make_grid(images)\n",
+    "matplotlib_imshow(img_grid, one_channel=True)\n",
+    "\n",
+    "writer.add_image('four_artist_images', img_grid)\n",
+    "writer.add_graph(model, images)\n",
+    "\n",
+    "# Log image grid and model graph\n",
+    "writer.add_graph(model, images)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01c80f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infer_model = train_and_evaluate(model, optimizer, train_loader, val_loader, scheduler, device, CFG[\"EPOCHS\"], writer, le.classes_)"
    ]
   },
   {
