--- a/W2/w2_basic.ipynb
+++ b/W2/w2_basic.ipynb
@@ -102,9 +102,20 @@
    "source": [
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
-    "\n",
+    "        super(Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(28*28, 512)\n",
+    "        self.fc2 = nn.Linear(512, 256)\n",
+    "        self.fc3 = nn.Linear(256, 10)\n",
     "        \n",
-    "    def forward(self,x):\n"
+    "    def forward(self,x):\n",
+    "        x = x.view(-1, 28*28)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.sigmoid(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = F.sigmoid(x)\n",
+    "        x = self.fc3(x)\n",
+    "        x = F.log_softmax(x, dim=1)\n",
+    "        return x"
    ]
   },
   {
@@ -114,16 +125,16 @@
    "outputs": [],
    "source": [
     "# Model\n",
-    "model = \n",
+    "model = Net().to(device)\n",
     "\n",
     "# Optimizer\n",
-    "optimizer = \n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Loss function\n",
-    "criterion = \n",
+    "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "# scheduler\n",
-    "scheduler =\n",
+    "scheduler = lr_scheduler.StepLR(optimizer, step_size=7, gamma=0.1)\n",
     "\n",
     "print(model)"
    ]
@@ -176,19 +187,19 @@
     "    for batch_idx, (data, target) in enumerate(train_loader):\n",
     "        data, target = data.to(device), target.to(device)\n",
     "        # parameter initialization\n",
-    "        optimizer\n",
+    "        optimizer.zero_grad()\n",
     "        \n",
     "        # forward pass\n",
-    "        output = \n",
+    "        output = model(data)\n",
     "        \n",
     "        # calculate loss\n",
-    "        loss = \n",
+    "        loss = criterion(output, target)\n",
     "        \n",
     "        # backward pass\n",
-    "        loss\n",
+    "        loss.backward()\n",
     "        \n",
     "        # optimize\n",
-    "        optimizer\n",
+    "        optimizer.step()\n",
     "\n",
     "        running_loss += loss.item()\n",
     "        _, predicted = torch.max(output.data, 1)\n",
@@ -262,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
