--- a/W3/w2_review.ipynb
+++ b/W3/w2_review.ipynb
@@ -271,10 +271,63 @@
     "# 훈련 함수\n",
     "def train(model, train_loader, optimizer, scheduler, criterion, epoch, device, writer=None):\n",
     "\n",
+    "    # 모델 훈련 모드로 전환\n",
+    "    \n",
+    "    # 초기화: loss, corrects, total\n",
+    "    \n",
+    "    \n",
+    "    # 훈련 데이터에 대한 루프\n",
+    "    \n",
+    "        # 데이터를 디바이스로 이동\n",
+    "        \n",
+    "        # optimizer 초기화\n",
+    "        \n",
+    "        # forward\n",
+    "        \n",
+    "        # loss 계산\n",
+    "        \n",
+    "        # backward\n",
+    "        \n",
+    "        # optimizer 업데이트\n",
+    "        \n",
+    "        # loss 업데이트\n",
+    "        \n",
+    "        \n",
+    "        # 정확도 계산\n",
+    "    \n",
+    "    \n",
+    "    # epoch 당 평균 loss, 정확도 계산\n",
+    "    \n",
+    "    \n",
+    "    # scheduler 업데이트\n",
+    "    \n",
+    "    # tensorboard에 기록: loss, accuracy\n",
+    "    \n",
     "\n",
     "# 테스트 함수\n",
     "def test(model, test_loader, criterion, epoch, device, writer=None):\n",
-    "\n",
+    "    \n",
+    "    # 모델 평가 모드로 전환\n",
+    "    \n",
+    "    # 초기화: loss, corrects, total\n",
+    "    \n",
+    "    # 모델에 대한 no_grad\n",
+    "    \n",
+    "        # 테스트 데이터에 대한 루프\n",
+    "        \n",
+    "            # 데이터를 디바이스로 이동\n",
+    "            \n",
+    "            # forward\n",
+    "            \n",
+    "            # loss 계산\n",
+    "            \n",
+    "            # loss 업데이트\n",
+    "            \n",
+    "            # 정확도 계산\n",
+    "    \n",
+    "    # epoch 당 평균 loss, 정확도 계산\n",
+    "    \n",
+    "    # tensorboard에 기록: loss, accuracy\n",
     "\n",
     "\n",
     "# 훈련 및 테스트 실행\n",
