--- a/W3/w3_artist.ipynb
+++ b/W3/w3_artist.ipynb
@@ -83,12 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda')\n",
-    "# elif torch.backends.mps.is_available():\n",
-    "#     device = torch.device('mps')\n",
-    "else:\n",
-    "    device = torch.device('cpu')\n",
+    "# GPU 사용 가능 여부 확인\n",
+    "device = pass\n",
     "\n",
     "print(\"Using PyTorch version:\", torch.__version__,' Device:', device)"
    ]
@@ -249,6 +245,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b974c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 각 클래스 별 데이터 수 확인\n",
+    "\n",
+    "# artist 별 데이터 합계\n",
+    "class_count = pass\n",
+    "class_count['artist'] = le.inverse_transform(class_count['artist'])\n",
+    "class_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3f725a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(train_img_paths), len(val_img_paths), len(le.classes_)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ac27ed36-8031-47a7-bd0d-a913513f2e8e",
    "metadata": {},
@@ -264,27 +285,24 @@
    "outputs": [],
    "source": [
     "class CustomDataset(Dataset):\n",
-    "    def __init__(self, img_paths, labels, transforms=None):\n",
-    "        self.img_paths = img_paths\n",
-    "        self.labels = labels\n",
-    "        self.transforms = transforms\n",
+    "    pass\n",
+    "    # __init__ : img_paths, labels, transforms를 초기화\n",
     "\n",
-    "    def __getitem__(self, index):\n",
-    "        img_path = self.img_paths[index]\n",
-    "        image = cv2.imread(img_path)\n",
-    "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
-    "        \n",
-    "        if self.transforms is not None:\n",
-    "            image = self.transforms(image)\n",
-    "        \n",
-    "        if self.labels is not None:\n",
-    "            label = self.labels[index]\n",
-    "            return image, label\n",
-    "        else:\n",
-    "            return image\n",
+    "    # __getitem__ : index에 해당하는 데이터를 반환\n",
     "    \n",
-    "    def __len__(self):\n",
-    "        return len(self.img_paths)"
+    "        # img_path 지정\n",
+    "        \n",
+    "        # cv2로 이미지 읽기\n",
+    "        \n",
+    "        # cv2로 읽은 이미지를 RGB로 변환\n",
+    "        \n",
+    "        # transforms가 존재하면 이미지 변환\n",
+    "        \n",
+    "        # labels이 존재하면 이미지와 라벨 반환\n",
+    "        \n",
+    "        # labels이 존재하지 않으면 이미지 반환\n",
+    "    \n",
+    "    # __len__ : 데이터셋의 총 데이터 수를 반환\n"
    ]
   },
   {
@@ -295,10 +313,10 @@
    "outputs": [],
    "source": [
     "train_transform = transforms.Compose([\n",
-    "    transforms.ToPILImage(),\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225))\n",
+    "    transforms.ToPILImage(), # numpy image -> PIL image\n",
+    "    transforms.Resize((224, 224)), # PIL image\n",
+    "    transforms.ToTensor(), # PIL image -> tensor\n",
+    "    transforms.Normalize(mean=(0.485, 0.456, 0.406), std=(0.229, 0.224, 0.225)) # Imagenet normalization\n",
     "])\n",
     "\n",
     "test_transform = transforms.Compose([\n",
@@ -316,11 +334,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = CustomDataset(train_img_paths, train_labels, train_transform)\n",
-    "train_loader = DataLoader(train_dataset, batch_size = CFG['BATCH_SIZE'], shuffle=True, num_workers=0)\n",
+    "# CustomDataset 클래스로 train_dataset, val_dataset 생성\n",
+    "train_dataset = pass\n",
+    "val_dataset = pass\n",
     "\n",
-    "val_dataset = CustomDataset(val_img_paths, val_labels, test_transform)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=CFG['BATCH_SIZE'], shuffle=False, num_workers=0)"
+    "# DataLoader로 train_loader, val_loader 생성: batch_size, shuffle, num_workers 설정\n",
+    "train_loader = pass\n",
+    "val_loader = pass"
    ]
   },
   {
@@ -339,15 +359,10 @@
    "outputs": [],
    "source": [
     "class BaseModel(nn.Module):\n",
-    "    def __init__(self, num_classes=len(le.classes_)):\n",
-    "        super(BaseModel, self).__init__()\n",
-    "        self.backbone = models.efficientnet_b0(pretrained=True)\n",
-    "        self.classifier = nn.Linear(1000, num_classes)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.backbone(x)\n",
-    "        x = self.classifier(x)\n",
-    "        return x"
+    "    pass\n",
+    "    # __init__ : backbone, classifier 초기화\n",
+    "    \n",
+    "    # forward : backbone -> classifier -> return\n"
    ]
   },
   {
@@ -412,83 +427,92 @@
    "outputs": [],
    "source": [
     "def train(model, optimizer, train_loader, device, writer, epoch, classes):\n",
-    "    model.train()\n",
-    "    train_loss = []\n",
-    "    criterion = nn.CrossEntropyLoss().to(device)\n",
+    "    pass\n",
+    "    # 모델을 학습 모드로 설정\n",
     "    \n",
-    "    for img, label in tqdm(iter(train_loader)):\n",
-    "        img, label = img.float().to(device), label.to(device)\n",
-    "\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        model_pred = model(img)\n",
-    "\n",
-    "        loss = criterion(model_pred, label)\n",
-    "\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        train_loss.append(loss.item())\n",
-    "\n",
-    "    tr_loss = np.mean(train_loss)\n",
+    "    # train_loss 초기화\n",
     "    \n",
-    "    writer.add_scalar('Loss/train', tr_loss, epoch)    \n",
-    "    writer.add_figure('predictions vs. actuals', plot_classes_preds(model, images, labels, classes), global_step=epoch)\n",
+    "    # CrossEntropyLoss 함수 정의\n",
     "    \n",
-    "    return tr_loss\n",
+    "    \n",
+    "    # train_loader에서 batch 단위로 데이터를 불러옴\n",
+    "    \n",
+    "        # 이미지, 라벨을 device로 이동\n",
+    "        \n",
+    "        # optimizer 초기화\n",
+    "        \n",
+    "        # forward\n",
+    "        \n",
+    "        # loss 계산\n",
+    "        \n",
+    "        # backward\n",
+    "        \n",
+    "        # optimizer 업데이트\n",
+    "        \n",
+    "        # train_loss에 loss 추가\n",
+    "        \n",
+    "    # train_loss의 평균 계산\n",
+    "    \n",
+    "    # writer에 train_loss 추가\n",
+    "\n",
     "\n",
     "def competition_metric(true, pred):\n",
     "    return f1_score(true, pred, average=\"macro\")\n",
     "\n",
     "def validation(model, test_loader, device, writer, epoch):\n",
-    "    model.eval()\n",
+    "    pass\n",
+    "    # 모델을 평가 모드로 설정\n",
     "    \n",
-    "    model_preds = []\n",
-    "    true_labels = []\n",
+    "    # model_preds, true_labels 초기화\n",
     "    \n",
-    "    val_loss = []\n",
-    "    criterion = nn.CrossEntropyLoss().to(device)\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        for img, label in tqdm(iter(test_loader)):\n",
-    "            img, label = img.float().to(device), label.to(device)\n",
-    "\n",
-    "            model_pred = model(img)\n",
-    "\n",
-    "            loss = criterion(model_pred, label)\n",
-    "\n",
-    "            val_loss.append(loss.item())\n",
-    "\n",
-    "            model_preds += model_pred.argmax(1).detach().cpu().numpy().tolist()\n",
-    "            true_labels += label.detach().cpu().numpy().tolist()\n",
-    "\n",
-    "    val_f1 = competition_metric(true_labels, model_preds)\n",
-    "    val_loss = np.mean(val_loss)\n",
+    "    # val_loss 초기화\n",
     "    \n",
-    "    writer.add_scalar('Loss/val', val_loss, epoch)\n",
-    "    writer.add_scalar('F1/val', val_f1, epoch)\n",
-    "    return val_loss, val_f1\n",
+    "    # CrossEntropyLoss 함수 정의\n",
+    "    \n",
+    "    \n",
+    "    # 모델에 대한 no_grad\n",
+    "    \n",
+    "        # 테스트 데이터에 대한 루프\n",
+    "        \n",
+    "            # 데이터를 디바이스로 이동\n",
+    "            \n",
+    "            # forward\n",
+    "            \n",
+    "            # loss 계산\n",
+    "            \n",
+    "            # val_loss에 loss 추가\n",
+    "            \n",
+    "            # model_preds에 model_pred 추가\n",
+    "            \n",
+    "            # true_labels에 label 추가\n",
+    "            \n",
+    "    # competition_metric 함수로 val_f1 계산\n",
+    "    \n",
+    "    # val_loss의 평균 계산\n",
+    "    \n",
+    "    \n",
+    "    # writer에 val_loss, val_f1 추가\n",
+    "    \n",
     "\n",
     "def train_and_evaluate(model, optimizer, train_loader, test_loader, scheduler, device, epochs, writer, classes):\n",
-    "    model.to(device)\n",
-    "\n",
-    "    best_score = 0\n",
-    "    best_model = None\n",
+    "    pass\n",
+    "    # 모델을 device로 이동\n",
     "    \n",
-    "    for epoch in range(1, epochs+1):\n",
-    "        tr_loss = train(model, optimizer, train_loader, device, writer, epoch, classes)\n",
-    "        val_loss, val_score = validation(model, test_loader, device, writer, epoch)\n",
+    "    # best_score, best_model 초기화\n",
+    "    \n",
+    "    \n",
+    "    # epoch에 대한 루프\n",
     "        \n",
-    "        print(f'Epoch [{epoch}], Train Loss : [{tr_loss:.5f}] Val Loss : [{val_loss:.5f}] Val F1 Score : [{val_score:.5f}]')\n",
-    "\n",
-    "        if scheduler is not None:\n",
-    "            scheduler.step()\n",
+    "        # train 함수로 학습\n",
     "        \n",
-    "        if best_score < val_score:\n",
-    "            best_model = model.state_dict()\n",
-    "            best_score = val_score\n",
-    "\n",
-    "    return best_model"
+    "        # validation 함수로 평가\n",
+    "        \n",
+    "        # 결과 출력\n",
+    "        \n",
+    "        # scheduler가 존재하면 step\n",
+    "        \n",
+    "        # best_score보다 val_score가 크면 best_model에 모델 저장\n"
    ]
   },
   {
@@ -508,10 +532,10 @@
    },
    "outputs": [],
    "source": [
-    "model = BaseModel().to(device)\n",
-    "model.eval()\n",
-    "optimizer = torch.optim.Adam(params = model.parameters(), lr = CFG[\"LEARNING_RATE\"])\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=2, gamma=0.1)"
+    "# 모델, optimizer, scheduler 초기화\n",
+    "model = pass\n",
+    "optimizer = pass\n",
+    "scheduler = pass"
    ]
   },
   {
@@ -528,9 +552,6 @@
     "matplotlib_imshow(img_grid, one_channel=True)\n",
     "\n",
     "writer.add_image('four_artist_images', img_grid)\n",
-    "writer.add_graph(model, images)\n",
-    "\n",
-    "# Log image grid and model graph\n",
     "writer.add_graph(model, images)"
    ]
   },
